# winexplorer-hash

./: .gitignore  Cargo.toml  README.md  build_and_register.ps1  create_release.ps1  hash_schema.propdesc  register.ps1
.github/workflows/: release.yml
src/: lib.rs
