[package]
name = "explorer_hash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
md-5 = "0.10"
hex = "0.4"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "implement",
]
